syntax = "proto3";

option java_multiple_files = true;
option java_package = "chordial.server";
option java_outer_classname = "ChordialRequestService";

import "google/api/annotations.proto";

package chordial.server;

service RequestService {
    rpc Get(GetRequest) returns (GetResponse) {
        option (google.api.http) = {
            get: "/v1/api/keys/{key}"
        };
    }
    rpc Post(PostRequest) returns (PostResponse) {}
    rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    bytes value = 1;
}

message PostRequest {
    string key = 1;
    bytes value = 2;
}

message PostResponse {}

message DeleteRequest {
    string key = 1;
}

message DeleteResponse {}